<resources>
    <string name="app_name">Crescendo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_artists">Artistas</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_demos">Mis Canciones</string>
    <string name="text_user_label">Nombre</string>
    <string name="text_email_label">Email</string>
    <string name="text_password_label">Contraseña</string>
    <string name="button_login_label">Ingresar</string>
    <string name="button_register_label">Registrarse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Perfil</string>
    <string name="mock_text">Prueba</string>
    <string name="title_activity_artist_detail">Detalles del Artista</string>

    <string name="youtube_api_key">AIzaSyDNu6af_OVUapzNaFeR0otWFTYOHMz1vVs</string>

    <string name="player_error">Error inicializando el reproductor de Youtube: %s</string>
    <string name="seek_to">Saltar a</string>
    <string name="seek_to_hint">Segundos</string>
    <string name="title_activity_artwork_detail">Detalles</string>
    <string name="artist_details_artworks_label">Canciones -</string>
    <string name="artist_details_followers_label">Followers -</string>
    <string name="artist_details_new_artwork_label">Nuevo Video</string>
    <string name="artist_details_new_artwork_button">Subir</string>
    <string name="artist_details_edit_text_hint">ID del video</string>
    <string name="logout_button_label">Cerrar Sesión</string>
    <string name="there_is_no_favorites">No hay Favoritos</string>
    <string name="there_is_no_demos">No hay Canciones</string>
    <string name="new_artwork_description">Descripción del video</string>
    <string name="new_artwork_title">Titulo del video</string>
    <string name="button_login_register_label">Registrarse</string>
    <string name="register_role_hint">Rol Musical</string>
    <string name="register_genre_hint">Genero Musical</string>
</resources>
