<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewcontrollers.activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_user"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"/>

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="@dimen/logo_default_size"
        android:layout_height="@dimen/logo_default_size"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_user"
        android:src="@mipmap/applogo"/>

    <EditText
        android:id="@+id/text_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="@dimen/edit_text_size_login"
        android:textColor="@color/colorIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorHint="@color/colorIcons"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/text_user_label"/>


    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/text_password_label"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/colorIcons"
        android:textColorHint="@color/colorIcons"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="@dimen/edit_text_size_login"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_user" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/button_login"
            android:layout_width="@dimen/button_with_login"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/button_login_label"
            android:textSize="@dimen/button_label_size"
            android:textStyle="italic"
            android:background="@color/colorPrimary"
            android:textColor="#fff" />
        <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/button_with_login"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/button_login_register_label"
        android:textSize="@dimen/button_label_size"
        android:textStyle="italic"
        android:background="@color/colorPrimary"
        android:textColor="#fff" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
